--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <table id="userInputTable">
                         <tr>
                             <td colspan="2" id="formTitle">
-                                <h3>Wpisz imiona każdej osoby w odzielnej linijce</h3>
+                                <h3>Wpisz imie każdej z osób w odzielnej linijce</h3>
                             </td>
                         </tr>
                         <tr>
